# sigli

./: Cargo.toml  README.md  example
src/: lib.rs  main.rs
src/algo/: aes128gcm.rs  aes256gcm.rs  mod.rs
src/core/: aes128gcm.rs  aes256gcm.rs  mod.rs
src/format/: hex.rs  mod.rs  plain1.rs  raw.rs  signal.rs  signal1.rs
tests/: cli_test.rs
