[package]
name = "sigli"
version = "0.1.0"
authors = ["Richard Sunderland <dev@sunderlandfamily.info>"]
edition = "2018"
description="Cryptographic command line interface with emphasis on short messages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rand = "0.7.3"
hex = "0.4.2"
aes-gcm = "0.3.2"
convert-base = "1.1.0"

