[package]
name = "sigli"
version = "0.1.0"
authors = ["Richard Sunderland <dev@sunderlandfamily.info>"]
edition = "2018"
description="Cryptographic command line interface with emphasis on short messages"
categories = ["cryptography", "cli"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rimasu/sigli"
homepage = "https://github.com/rimasu/sigli"
documentation = "https://github.com/rimasu/sigli"

[dependencies]
clap = "2.33.0"
rand = "0.7.3"
hex = "0.4.2"
aes-gcm = "0.3.2"
convert-base = "1.1.0"


[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0.0"
tempdir = "0.3.7"
regex = "1.3.4"